Cambio de header

--- a/style.css
+++ b/style.css
@@ -15,11 +15,10 @@ body{
 }
 
 #barra{
-    padding: 10px;
+    padding: 0 20px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    
 }
 
 #barra-lista{
@@ -48,7 +47,12 @@ a:hover{
 /* Body */
 
 #presentacion{
-    padding: 40px;
+    background-image: url(img/fondo.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-color: #151e2e; /*En caso que el fondo no carge*/
+    padding: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -56,15 +60,24 @@ a:hover{
     flex-direction: column;
 }
 
-.descripcion h2{
-    padding: 0;
-    margin: 5px;
+#presentacion h1{
+    font-size: 40px;
 }
 
+#presentacion h2{
+    font-size: 20px;
+    color: #c24d2c;
+}
+
+#presentacion h2,#presentacion h1{
+    margin: 0;
+}
+
+
 .descripcion{
-    padding:5px;
+    padding:15px;
     max-width: 500px;
-    text-align: center;
+    display: flex;
 }
 
 #selfieJason{
