--- a/style.css
+++ b/style.css
@@ -170,15 +170,48 @@ a:hover{
 /* Contacto */
 
 .contacto{
-    height: 50vh;
-    padding: 10px 20%;
-    display: grid;
-    grid-template-columns: 100px 100px;
-    grid-template-rows: 100px    100px;
+    height: 80vh;
+    margin: 10px 20%;
 }
 
-input{
-    display: block;
+.contacto-form{
+    max-width: 450px;
+    display: flex;
+    flex-direction: column;
+    margin: 50px auto;
+}
+
+.contacto-item{
+    font-size: 18px;
+    font-weight: 100;
+    color: white;
+    border: 2px solid #c24d2c;
+    border-radius: 5px;
+    margin: 10px 0;
+    background-color: transparent;
+    padding: 13px;
+    transition: all 0.3s;
+}
+
+.enviar{
+    background-color: #c24d2c;
+    padding: 14px 0;
+    color: white;
+    font-size: 24px;
+    font-weight: 800;
+    border-radius: 5px;
+    border: 0;
+    transition: 0.2s;
+    cursor: pointer;    
+}
+
+.enviar:hover{
+    background-color: #ff0000;
+    
+}
+
+textarea{
+    resize: none;
 }
 
 /* Footer */
