--- a/style.css
+++ b/style.css
@@ -563,3 +563,47 @@ footer{
         right: 0px;
     }
 }*/
+
+@media screen and (max-width: 360px) {
+    .grid-item{
+        font-size: 11px;
+    }
+
+    #barra{
+        padding: 10px 5px;
+    }
+}
+
+@media screen and (max-width: 290px) {
+    
+    .grid-item p{
+        font-size: 10px;
+    }
+    
+    #perfil{
+        max-width: 250px;
+    }
+}
+
+@media screen and (max-width: 1024px) and (max-height: 600px) {
+    .presentacion, #contenedor-habilidades, #proyectos{
+        width: 100vw;
+        padding: 64px;
+    }
+
+    .proyectos-item{
+        width: 300px;
+        height: 400px;
+    }
+    
+    footer{
+        width: 112.5vw;
+    }
+
+    .contacto{
+        width: 70vw;
+        padding: 30px 0;
+        display: flex;
+        flex-direction: column;
+    }
+}
